# modern-python-package

./: .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: build-docs.yml  publish.yml  test.yml
docs/: .buildinfo  conf.py  genindex.html  index.html  index.rst  objects.inv  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree
docs/_sources/: index.rst
docs/source/: conf.py  index.rst
src/python_pkg/: __init__.py  dummy.py
tests/: test_dummy.py
