[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "python_pkg"
authors = [{name = "Mark Douthwaite", email = "mark@douthwaite.io"}]
license = {file = "LICENSE"}
readme = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.9"
dynamic = ["version", "description"]
dependencies = []

[project.optional-dependencies]
test = []
dev = ["pre-commit>=3.0.0"]
doc = ["mkdocs-material"]

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.black]
target-version = ["py39", "py310"]
include = '\.pyi?$'

[pydocstyle]
convention = "numpy"
add-ignore = "D100,D101,D104,D105,D203,D405"
